--- a/configuration.properties
+++ b/configuration.properties
@@ -1,7 +1,5 @@
 browser=chrome
 env=https://login1.nextbasecrm.com
 username=helpdesk1@cydeo.com
-searchValue=apple
-validPassword=Parola12
-invalidPassword=Parola
+searchValue=hats for men
 #comment line
