--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,9 @@
 browser=chrome
-env=https://login1.nextbasecrm.com
-username=helpdesk1@cydeo.com
+env_03=http://zero.webappsecurity.com/
+username=username
+password=password
+invalidUsername=user
+invalidPassword=pass
+expectedAlertMessage=Login and/or password are wrong.
 searchValue=hats for men
 #comment line
