Title datas received from file

--- a/configuration.properties
+++ b/configuration.properties
@@ -5,5 +5,7 @@ password=password
 invalidUsername=user
 invalidPassword=pass
 expectedAlertMessage=Login and/or password are wrong.
+summaryTitle=Zero - Account Summary
+activityTitle=Zero - Account Activity
 searchValue=hats for men
 #comment line
